--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="about.html">About</a>
             </li>
             <li>
-                <input type="text" id="myInput2" onkeyup="myFunc()" placeholder="Search a Hobby">
+                <input type="text" id="myInput2" onkeyup="myFunc()" placeholder="Search an esports">
                 <ul id="myUL">
                     <li><a href="pubgm.html">Coding</a></li>
                     <li><a href="clashofclans.html">Guitar</a></li>
