--- a/game.html
+++ b/game.html
@@ -18,10 +18,10 @@
     ></script>
   </head>
   <body>
-    <!-- <script src="js/three.js"></script>
+    <script src="js/three.js"></script>
     <script src="js/three.min.js"></script>
     <script src="js/three.module.js"></script> -->
-    <!-- <script src="plan.js"></script> -->
-    <script src="player.js"></script>
+    <!-- <script src="plan.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
