--- a/game.html
+++ b/game.html
@@ -20,8 +20,9 @@
   <body>
     <script src="js/three.js"></script>
     <script src="js/three.min.js"></script>
-    <script src="js/three.module.js"></script> -->
-    <!-- <script src="plan.js"></script>
+    <script src="js/three.module.js"></script>
+    -->
+    <script src="plan.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
