--- a/game.html
+++ b/game.html
@@ -21,8 +21,8 @@
     <script src="js/three.js"></script>
     <script src="js/three.min.js"></script>
     <script src="js/three.module.js"></script>
-    -->
-    <script src="plan.js"></script>
+
+    <!-- <script src="plan.js"></script> -->
     <script src="game.js"></script>
   </body>
 </html>
