--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
     <div id="slideout-menu">
+        
+        <script src="script.js"></script>
         <ul>
             <li>
                 <a href="index.html">Home</a>
