--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     <i class="fas fa-search" onclick="myFunction()"></i>
                     <div id="myDropdown" class="dropdown-content">
                       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                        <a href="pvm.html">PUBG Mobile</a>
-                        <a href="rts.html">Clash of Clans</a>
-                        <a href="fps.html">COD Mobile</a>
-                        <a href="moba.html">Free Fire</a>
+                        <a href="pvm.html">PVM</a>
+                        <a href="rts.html">RTS</a>
+                        <a href="fps.html">FPS</a>
+                        <a href="moba.html">MOBO</a>
                     </div>
                   </div>
             </li>
