--- a/pvm.html
+++ b/pvm.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Glee</title>
+  <title>PVM</title>
 </head>
 
 <body>
@@ -60,10 +60,10 @@
                 <i class="fas fa-search" onclick="myFunction()"></i>
                 <div id="myDropdown" class="dropdown-content">
                   <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                    <a href="pvm.html">PUBG Mobile</a>
-                    <a href="rts.html">Clash of Clans</a>
-                    <a href="fps.html">COD Mobile</a>
-                    <a href="moba.html">Free Fire</a>
+                    <a href="pvm.html">PVMe</a>
+                    <a href="rts.html">RTS</a>
+                    <a href="fps.html">FPS</a>
+                    <a href="moba.html">MOBA</a>
                 </div>
               </div>
         </li>
@@ -76,19 +76,28 @@
 
   <main>
 
-    <h2 class="page-heading">Dancing</h2>
+    <h2 class="page-heading">PVM(Player versus player)</h2>
     <div id="post-container">
       <section id="hobby">
         <div class="card">
           <div class="card-image">
-            <img src="img/1.jpg" alt="Card Image">
+            <img src="img\pvp.png" alt="Card Image">
           </div>
           <div class="card-description">
             <h3>About</h3>
-            <p>PvP or player versus player is precisely as the name suggests.
-              This means that one or more humans will play versus one or more opponents, humans as well .
-              This type of esports has been very popular and it still is. However, in the recent period of time, it became less common among players. 
-              They moved to other types that will be discussed below. Most games used in this type are sports or combat games.</p>
+            <p>PvP or player versus player is precisely as the name suggests. This means that one or more humans will play versus one or more opponents, humans as well .This type of esports has been very popular and it still is. However, in the recent period of time, it became less common among players. They moved to other types that will be discussed below. Most games used in this type are sports or combat games.</p><br>
+            <h3>
+                1. Counter-Strike: Global Offensive<br>
+                2. VALORANT<br>
+                3. DOOM<br>
+                4.Fortnite<br>
+                5.World of warcraft<br>
+                6.quake champions<br>
+                7.starcraft ll<br>
+                8. Worms: Armageddon<br>
+                9.unreal tournament<br>
+                10.Quake lll Arena<br>
+            </h3>
           </div>
         </div>
 
