--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li>
                 <input type="text" id="myInput2" onkeyup="myFunc()" placeholder="Search an esports">
                 <ul id="myUL">
-                    <li><a href="pvm.html">PVM</a></li>
+                    <li><a href="pvp.html">PVP</a></li>
                     <li><a href="rts.html">RTS</a></li>
                     <li><a href="fps.html">FPS</a></li>
                     <li><a href="moba.html">MOBA</a></li>
@@ -82,7 +82,7 @@
                     <i class="fas fa-search" onclick="myFunction()"></i>
                     <div id="myDropdown" class="dropdown-content">
                       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                        <a href="pvm.html">PVM</a>
+                        <a href="pvp.html">PVP</a>
                         <a href="rts.html">RTS</a>
                         <a href="fps.html">FPS</a>
                         <a href="moba.html">MOBO</a>
