--- a/fps.html
+++ b/fps.html
@@ -81,14 +81,27 @@
       <section id="hobby">
         <div class="card">
           <div class="card-image">
-            <img src="img/1.jpg" alt="Card Image">
+            <img src="fps.png" alt="Card Image">
           </div>
           <div class="card-description">
+
+
             <h3>About</h3>
-            <p>PvP or player versus player is precisely as the name suggests.
-              This means that one or more humans will play versus one or more opponents, humans as well .
-              This type of esports has been very popular and it still is. However, in the recent period of time, it became less common among players. 
-              They moved to other types that will be discussed below. Most games used in this type are sports or combat games.</p>
+            <p>First person shooter (FPS) is probably the most popular type at the moment and the most desirable. Here a player will lead one character in one game. The most popular games are CS: Go, Call of Duty, and many others. In a nutshell, a player will see the virtual world from the character’s perspective.
+Here is to see only two players competing. Usually, there are many more and each one is a man for himself. Only one can be the best player and win the match. We must add that these games are very appealing among all types of gamers and they are commonly played by beginners and professionals. There are plenty of weapons and maps to choose from, which is one of the main reasons for their popularity.</p>
+            <h3>
+             1. Black Mesa
+             2.Doom Eterna
+             3.Call of Duty Black Ops Cold War
+             4.Overwatch
+             5.Counter Strike: Global Offensive
+             6.Half Life 2
+             7.Rainbow Six Siege
+             8.Escape from Tarkov
+             9.Titanfall 2
+             10.Wolfenstein 2: The New Colossus
+
+            </h3>
           </div>
         </div>
 
@@ -97,10 +110,12 @@
       <aside id="sidebar">
         <h3>Resources</h3>
         <p>Videos</p>
-        <p><iframe width="460" height="258.15" src="https://youtu.be/KnpljMWwy3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-        <p></p><iframe width="460" height="258.15" src="https://youtu.be/QOkBRJEcOEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p><iframe width="460" height="258.15" src="https://youtu.be/KHKUVdb5YTM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+     
+        <p><iframe width="460" height="258.15" src="https://youtu.be/QOkBRJEcOEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         <p>Links</p>
-        <p><a href="http://www.learntodance.com/" style="color: #f2687f;">How to learn to dance</a></p>
+        <p><a href="http://www.learntodance.com/" style="color: #f2687f;">Black mesa
+          </a></p>
       </aside>
     </div>
 
