--- a/pvp.html
+++ b/pvp.html
@@ -114,10 +114,10 @@
       <aside id="sidebar">
         <h3>Resources</h3>
         <p>Videos</p>
-        <p><iframe width="460" height="258.15" src="https://youtu.be/KnpljMWwy3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-        <p></p><iframe width="460" height="258.15" src="https://youtu.be/QOkBRJEcOEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p><iframe width="460" height="258.15" src="https://youtu.be/xEcFDwUva4A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p></p><iframe width="460" height="258.15" src="https://youtu.be/GOPjSKAXt0Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         <p>Links</p>
-        <p><a href="http://www.learntodance.com/" style="color: #f2687f;">How to learn to dance</a></p>
+        <p><a href="https://r.search.yahoo.com/_ylt=AwrPiBQKhNhgszgAvLG7HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3Nj/RV=2/RE=1624831114/RO=10/RU=https%3a%2f%2fwww.silvergames.com%2fen%2ft%2fpvp%23%3a~%3atext%3dWhat%2520are%2520PvP%2520Games%253F%2520PvP%2520Games%2520are%2520local%2cand%2520try%2520win%2520the%2520online%2520PvP%2520sniper%2520battle./RK=2/RS=fJcUwvOgKFvXV9iqptiXeAFfXkE-" style="color: #f2687f;">What is PVP?</a></p>
       </aside>
     </div>
 
@@ -163,7 +163,7 @@
                     </li>
                 </ul>
             </div>
-            <p>Developed by Mayank and Ekta</p>
+            <p>Developed by The_Sorcerers</p>
         </div>
     </footer>
 
