--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <p>
                     <ul>
                         <li>
-                            <a href="pubgm.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
                             <a href="about.html">About</a>
@@ -180,18 +180,18 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.youtube.com/channel/UCNPQDaZaJtN6K13VFBu-_tQ">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/Ekta0609" target="_blank">
+                            <a href="https://github.com/choudhary13" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <p>Developed by </p>
+                <p>Developed by The_Sorcerers</p>
             </div>
         </footer>
 
