--- a/pvp.html
+++ b/pvp.html
@@ -133,7 +133,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="hobbies.html">Hobbies</a>
+                        <a href="esports.html">Esports</a>
                     </li>
                     <li>
                         <a href = "mailto: rajput.1@iitj.ac.in">Contact Us</a>
@@ -152,12 +152,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.youtube.com/channel/UCNPQDaZaJtN6K13VFBu-_tQ">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/choudhary13" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
