--- a/fps.html
+++ b/fps.html
@@ -74,62 +74,7 @@
             </li>
         </ul>
     </nav>
-  <div id="slideout-menu">
-      <ul>
-          <li>
-              <a href="index.html">Home</a>
-          </li>
-          <li>
-              <a  href="esports.html">Hobbies</a>
-          </li>
-          <li>
-              <a href="about.html">About</a>
-          </li>
-          <li>
-            <input type="text" id="myInput2" onkeyup="myFunc()" placeholder="Search an esports">
-            <ul id="myUL">
-                <li><a href="pvm.html">PVM</a></li>
-                    <li><a href="rts.html">RTS</a></li>
-                    <li><a href="fps.html">FPS</a></li>
-                    <li><a href="moba.html">MOBA</a></li>
-            </ul>
-        </li>
-      </ul>
-  </div>
-
-  <nav>
-    <div id="logo-img">
-        <a href="index.html">
-            <img src="img/logo.png" width="140" height="" alt="esports logo">
-        </a>
-    </div>
-    <div id="menu-icon">
-        <i class="fas fa-bars"></i>
-    </div>
-    <ul>
-        <li>
-            <a class="active" href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="esports.html">Esports in India</a>
-        </li>
-        <li>
-            <a href="about.html">About</a>
-        </li>
-        <li>
-            <div id="search-icon" class="dropdown">
-                <i class="fas fa-search" onclick="myFunction()"></i>
-                <div id="myDropdown" class="dropdown-content">
-                  <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                    <a href="pvm.html">PUBG Mobile</a>
-                    <a href="rts.html">Clash of Clans</a>
-                    <a href="fps.html">COD Mobile</a>
-                    <a href="moba.html">Free Fire</a>
-                </div>
-              </div>
-        </li>
-    </ul>
-</nav>
+  
 
   <div id="searchbox">
       <input type="text" placeholder="Search Here">
@@ -148,7 +93,7 @@
 
 
             <h3>About</h3>
-            <p>First person shooter (FPS) is probably the most popular type at the moment and the most desirable. Here a player will lead one character in one game. The most popular games are CS: Go, Call of Duty, and many others. In a nutshell, a player will see the virtual world from the character’s perspective.
+            <p>First person shooter (FPS) is probably the most popular type at the moment and the most desirable. Here a player will lead one character in one game. The most popular games are CS: Go, Call of Duty, and many others. In a nutshell, a player will see the virtual world from the character’s perspective.<br>
 Here is to see only two players competing. Usually, there are many more and each one is a man for himself. Only one can be the best player and win the match. We must add that these games are very appealing among all types of gamers and they are commonly played by beginners and professionals. There are plenty of weapons and maps to choose from, which is one of the main reasons for their popularity.</p>
             <h3>
              1. Black Mesa
@@ -180,6 +125,7 @@ Here is to see only two players competing. Usually, there are many more and each
       </aside>
     </div>
 
+    
     <footer>
         <div id="left-footer">
             <h3>Quick Links</h3>
@@ -192,7 +138,7 @@ Here is to see only two players competing. Usually, there are many more and each
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="hobbies.html">Hobbies</a>
+                        <a href="esports.html">Esports</a>
                     </li>
                     <li>
                         <a href = "mailto: rajput.1@iitj.ac.in">Contact Us</a>
@@ -211,18 +157,18 @@ Here is to see only two players competing. Usually, there are many more and each
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.youtube.com/channel/UCNPQDaZaJtN6K13VFBu-_tQ">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/choudhary13" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p>Developed by Mayank and Ekta</p>
+            <p>Developed by The_Sorcerers</p>
         </div>
     </footer>
 
