--- a/moba.html
+++ b/moba.html
@@ -104,6 +104,7 @@
       </aside>
     </div>
 
+    
     <footer>
         <div id="left-footer">
             <h3>Quick Links</h3>
@@ -116,7 +117,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="hobbies.html">Hobbies</a>
+                        <a href="esports.html">Esports</a>
                     </li>
                     <li>
                         <a href = "mailto: rajput.1@iitj.ac.in">Contact Us</a>
@@ -135,18 +136,18 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.youtube.com/channel/UCNPQDaZaJtN6K13VFBu-_tQ">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/choudhary13" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p>Developed by Mayank and Ekta</p>
+            <p>Developed by The_Sorcerers</p>
         </div>
     </footer>
 
