--- a/fps.html
+++ b/fps.html
@@ -82,7 +82,7 @@
 
   <main>
 
-    <h2 class="page-heading">Dancing</h2>
+    <h2 class="page-heading">FPS</h2>
     <div id="post-container">
       <section id="hobby">
         <div class="card">
@@ -96,16 +96,16 @@
             <p>First person shooter (FPS) is probably the most popular type at the moment and the most desirable. Here a player will lead one character in one game. The most popular games are CS: Go, Call of Duty, and many others. In a nutshell, a player will see the virtual world from the character’s perspective.<br>
 Here is to see only two players competing. Usually, there are many more and each one is a man for himself. Only one can be the best player and win the match. We must add that these games are very appealing among all types of gamers and they are commonly played by beginners and professionals. There are plenty of weapons and maps to choose from, which is one of the main reasons for their popularity.</p>
             <h3>
-             1. Black Mesa
-             2.Doom Eterna
-             3.Call of Duty Black Ops Cold War
-             4.Overwatch
-             5.Counter Strike: Global Offensive
-             6.Half Life 2
-             7.Rainbow Six Siege
-             8.Escape from Tarkov
-             9.Titanfall 2
-             10.Wolfenstein 2: The New Colossus
+             1. Black Mesa<br>
+             2.Doom Eterna<br>
+             3.Call of Duty Black Ops Cold War<br>
+             4.Overwatch<br>
+             5.Counter Strike: Global Offensive<br>
+             6.Half Life 2<br><br><br>
+             7.Rainbow Six Siege<br><br>
+             8.Escape from Tarkov<br>
+             9.Titanfall 2<br><br>
+             10.Wolfenstein 2: The New Colossus<br>
 
             </h3>
           </div>
