--- a/moba.html
+++ b/moba.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="slideout-menu">
+    <div id="slideout-menu">
         
         <section>
         <ul>
@@ -74,62 +74,6 @@
             </li>
         </ul>
     </nav>
-  <div id="slideout-menu">
-      <ul>
-          <li>
-              <a href="index.html">Home</a>
-          </li>
-          <li>
-              <a  href="esports.html">Hobbies</a>
-          </li>
-          <li>
-              <a href="about.html">About</a>
-          </li>
-          <li>
-            <input type="text" id="myInput2" onkeyup="myFunc()" placeholder="Search an esports">
-            <ul id="myUL">
-                <li><a href="pvm.html">PVM</a></li>
-                    <li><a href="rts.html">RTS</a></li>
-                    <li><a href="fps.html">FPS</a></li>
-                    <li><a href="moba.html">MOBA</a></li>
-            </ul>
-        </li>
-      </ul>
-  </div>
-
-  <nav>
-    <div id="logo-img">
-        <a href="index.html">
-            <img src="img/logo.png" width="140" height="" alt="esports logo">
-        </a>
-    </div>
-    <div id="menu-icon">
-        <i class="fas fa-bars"></i>
-    </div>
-    <ul>
-        <li>
-            <a class="active" href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="esports.html">Esports in India</a>
-        </li>
-        <li>
-            <a href="about.html">About</a>
-        </li>
-        <li>
-            <div id="search-icon" class="dropdown">
-                <i class="fas fa-search" onclick="myFunction()"></i>
-                <div id="myDropdown" class="dropdown-content">
-                  <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                    <a href="pvm.html">PUBG Mobile</a>
-                    <a href="rts.html">Clash of Clans</a>
-                    <a href="fps.html">COD Mobile</a>
-                    <a href="moba.html">Free Fire</a>
-                </div>
-              </div>
-        </li>
-    </ul>
-</nav>
 
   <div id="searchbox">
       <input type="text" placeholder="Search Here">
@@ -137,7 +81,7 @@
 
   <main>
 
-    <h2 class="page-heading">Dancing</h2>
+    <h2 class="page-heading">MOBO</h2>
     <div id="post-container">
       <section id="hobby">
         <div class="card">
@@ -146,16 +90,16 @@
           </div>
           <div class="card-description">
             <h3>About</h3>
-            <p>Multiplayer online battle arena (MOBA) may sound like a complicated type to explain but it is very simple. This is a variation of real time strategy. While in the RTS we usually have one versus one player, here we have teams. For example, we can see a team of 4 players playing versus another team or other teams of the same number of gamers. The goal is to defend the level or a map and defeat the opponent.
+            <p>Multiplayer online battle arena (MOBA) may sound like a complicated type to explain but it is very simple. This is a variation of real time strategy. While in the RTS we usually have one versus one player, here we have teams. For example, we can see a team of 4 players playing versus another team or other teams of the same number of gamers. The goal is to defend the level or a map and defeat the opponent.<br>
 The most popular games of this kind are League of Legends (LoL) and Heroes of the Storm (HotS) but there are many others. An interesting advantage here is that all players, members of the same team must cooperate together and get the best game possible in order to win. This is also one of many reasons why this type of esports is so desirable among all kinds of players.
 </p>
             <h3>
-              1.League of Legends. ...
-              2.Smite. ...
-              3.Heroes of the Storm. ...
-              4.Strife. ...
-              5.Arena of Valor. ...
-              6.Defense of the Ancients.
+              1.League of Legends.<br>
+              2.Smite. <br>
+              3.Heroes of the Storm.<br>
+              4.Strife. <br>
+              5.Arena of Valor. <br>
+              6.Defense of the Ancients.<br>
 
             </h3>
           </div>
